Issue #3813: cannot lanch python.exe via symbolic link on cygwin. readlink(2) can return non-null-terminated string. Reviewed by Amaury Forgeot d'Arc.